@@ -34,6 +34,8 @@
  </stability>
  <license uri="http://opensource.org/licenses/bsd-license.php">BSD</license>
  <notes>
+* [jan] Catch all PEAR errors in Sieve driver.
+* [jan] Allow script drivers to provide additional scripts to upload (Bug #8110).
 * [jan] Change default Sieve port to 4190 (Request #9791).
 * [jan] Fix reading default forward rule from preferences.
 * [jan] Fix removing flags with Sieve driver (Vilius Sumskas &lt;vilius@lnk.lt&gt;, Bug #9785).
@@ -897,6 +899,8 @@
    <date>2011-03-31</date>
    <license uri="http://opensource.org/licenses/bsd-license.php">BSD</license>
    <notes>
+* [jan] Catch all PEAR errors in Sieve driver.
+* [jan] Allow script drivers to provide additional scripts to upload (Bug #8110).
 * [jan] Change default Sieve port to 4190 (Request #9791).
 * [jan] Fix reading default forward rule from preferences.
 * [jan] Fix removing flags with Sieve driver (Vilius Sumskas &lt;vilius@lnk.lt&gt;, Bug #9785).
